--- a/main.css
+++ b/main.css
@@ -1,18 +1,18 @@
 *{
   /*border: 1px dashed black;*/
-  background-color: darkgrey;
+  background-color: #EAEAEA;
 }
-
-.nav{
+.nav, .footer {
+  left: 0px;
   width: 100%;
-  height: 50px;
-  background-color: lightgrey;
+  height: 75px;
+  background-color: #3B3A35;
 }
-
-.main{
-  margin: auto;
-  width: 1000px;
-  height: 1000px;
-  background-color: grey;
-  color: yellow;
+.nav {
+  position: absolute;
+  top: 0px;
+}
+.footer {
+  position: fixed;
+  bottom: 0px;
 }
