--- a/main.css
+++ b/main.css
@@ -7,6 +7,9 @@
   width: 100%;
   height: 50px;
   background-color: lightgrey;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  text-align: center;
 }
 
 .main{
@@ -25,4 +28,10 @@
 
 .price{
 
+}
+
+footer {
+    display: block;
+    text-align: center;
+    padding-bottom: 5px;
 }
