--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -100,9 +100,11 @@
   padding-top: 75px;
 }
 th, td {
-  width: 200px;
-  height: 40px;
+  max-width:101%;
+  height: 20px;
+  white-space:nowrap;
   border: 1px solid black;
+  padding: 0px;
 }
 #output{
   display: none;
